--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,8 @@
 		<!--  FONT STYLE -->
 		<!-- ICONS -->
 		<script
-			type="module"
-			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-		></script>
-		<script
-			nomodule
-			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+			src="https://kit.fontawesome.com/2dea4d38e7.js"
+			crossorigin="anonymous"
 		></script>
 		<!-- ICONS -->
 		<title>React App</title>
