--- a/public/index.html
+++ b/public/index.html
@@ -5,27 +5,15 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
+		<meta name="description"content="Web site created using create-react-app"/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
 		<!--  FONT STYLE -->
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700;800&display=swap"
-			rel="stylesheet"
-		/>
-		<!--  FONT STYLE -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
 		<!-- ICONS -->
-		<script
-			src="https://kit.fontawesome.com/2dea4d38e7.js"
-			crossorigin="anonymous"
-		></script>
-		<!-- ICONS -->
+		<script src="https://kit.fontawesome.com/2dea4d38e7.js" crossorigin="anonymous"></script>
 		<title>Readme Generator</title>
 	</head>
 	<body>
