--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description"content="Web site created using create-react-app"/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<!--  FONT STYLE -->
@@ -14,7 +13,30 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
 		<!-- ICONS -->
 		<script src="https://kit.fontawesome.com/2dea4d38e7.js" crossorigin="anonymous"></script>
-		<title>Readme Generator</title>
+		
+		<!-- SEO -->
+		<!-- Primary Meta Tags -->
+		<title>README project generator — Preview, Edit and Generate</title>
+		<meta name="title" content="README project generator — Preview, Edit and Generate">
+		<meta name="description" content="The easiest way to create a README for your project. Our simple template creates you a README file base in your entries , add title, description, features, libraries, frameworks languages and much more.">
+		<meta name="keywords" content="README, readme generator, markdown, markdown generator, free readme generator">
+		<meta name="author" content="Jose Latines">
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://metatags.io/">
+		<meta property="og:title" content="README project generator — Preview, Edit and Generate">
+		<meta property="og:description" content="The easiest way to create a README for your project. Our simple template creates you a README file base in your entries , add title, description, features, libraries, frameworks languages and much more.">
+		<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://metatags.io/">
+		<meta property="twitter:title" content="README project generator — Preview, Edit and Generate">
+		<meta property="twitter:description" content="The easiest way to create a README for your project. Our simple template creates you a README file base in your entries , add title, description, features, libraries, frameworks languages and much more.">
+		<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+		<!-- SEO -->
+
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
