Google Adsense check

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
 		<!-- ICONS -->
 		<script src="https://kit.fontawesome.com/2dea4d38e7.js" crossorigin="anonymous"></script>
-		
-		
-
+		<!-- Google Adsense -->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1868447189296885" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
