feat: ui, seo, folder structure

--- a/index.html
+++ b/index.html
@@ -4,16 +4,78 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<!-- Primary Meta Tags -->
+		<title>README project generator | Documentation Generator</title>
+		<meta
+			name="title"
+			content="README project generator | Documentation Generator"
+		/>
+		<meta
+			name="description"
+			content="Generate beautiful templates easily by simply entering your details. Say goodbye to manual styling and copy-pasting - our tool streamlines the entire process"
+		/>
+	
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:url"
+			content="https://readme-project-generator.netlify.app/"
+		/>
+		<meta
+			property="og:title"
+			content="README project generator | Documentation Generator"
+		/>
+		<meta
+			property="og:description"
+			content="Generate beautiful templates easily by simply entering your details. Say goodbye to manual styling and copy-pasting - our tool streamlines the entire process"
+		/>
+		<meta
+			property="og:image"
+			content="/screenshot.JPG"
+		/>
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta
+			property="twitter:url"
+			content="https://readme-project-generator.netlify.app/"
+		/>
+		<meta
+			property="twitter:title"
+			content="README project generator | Documentation Generator"
+		/>
+		<meta
+			property="twitter:description"
+			content="Generate beautiful templates easily by simply entering your details. Say goodbye to manual styling and copy-pasting - our tool streamlines the entire process"
+		/>
+		<meta
+			property="twitter:image"
+			content="/screenshot.JPG"
+		/>
+
+		<!-- Meta Tags Generated with https://metatags.io -->
 		<!-- icons -->
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
 		/>
-
-		<title>Vite + React + TS</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+			integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
+		<script
+			src="https://kit.fontawesome.com/193d89107a.js"
+			crossorigin="anonymous"
+		></script>
+		<title>README project generator | Documentation Generator</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<main id="root"></main>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
