--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-JGTWH8QRG8"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-JGTWH8QRG8');
+		</script>
+		<!-- Google tag (gtag.js) -->
 		<!-- Primary Meta Tags -->
 		<title>README project generator | Documentation Generator</title>
 		<meta
