--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		  gtag('config', 'G-JGTWH8QRG8');
 		</script>
 		<!-- Google tag (gtag.js) -->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1868447189296885"
+     crossorigin="anonymous"></script>
 		<!-- Primary Meta Tags -->
 		<title>README project generator | Documentation Generator</title>
 		<meta
